# d365fo-mcp-prompts

./: .gitignore  Customer_Credit_Risk_Analysis_Report.md  README.md  USER_AUTH.md  docker-compose.yml  main.py  pyproject.toml
.github/prompts/: dmf-create-export-package.prompt.md  dmf-entity-execution-sequence.prompt.md  dmf-execute-export-package.prompt.md  dmf-import-data-package.prompt.md  dmf-monitoring-error-handling.prompt.md  download-customer-invoices.prompt.md  download-srs.prompt.md  send-notifications.prompt.md  vendor-invoice-automation.prompt.md  whoami.prompt.md
.github/skills/: README.md
.github/skills/d365fo-expense-submission/: QUICK_REFERENCE.md  README.md  SKILL.md  expense_submission_example.py
docs/: INVOICE_DOWNLOAD_README.md
langgraph-mcp/: langgraph_d365fo_mcp.ipynb
langgraph-ssrs-download-agent/: d365fo_ssrs_download_agent.ipynb
scripts/: Convert-Base64ToPdf.ps1  Download-InvoicePdf.ps1
