[project]
name = "d365fo-mcp-prompts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "d365fo-client>=0.3.2",
    "ipykernel>=6.30.1",
    "langgraph>=1.0.0a4",
    "langchain>=1.0.0a14",
    "langchain-openai>=0.3.34",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.11",
]
