[project]
name = "d365fo-mcp-prompts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "d365fo-client>=0.3.3",
    "ipykernel>=7.0.1",
    "langgraph>=1.0.1",
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-mcp-adapters>=0.1.11",
]
